--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kerala Tourism</title>
-    <link rel="shortcut icon" href="/images/kerala-logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/kerala-logo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
@@ -25,7 +25,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top mask-custom shadow-2">
             <div class="container" style="align-items: end;">
-                <a class="navbar-brand" href="#!"><img src="/images/kerala-tourism-title.png" style="width: 90%;"
+                <a class="navbar-brand" href="#!"><img src="images/kerala-tourism-title.png" style="width: 90%;"
                         alt="..."></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,15 +80,15 @@
             <div id="carouselExampleAutoplaying" class="carousel slide " data-bs-ride="carousel">
                 <div class="carousel-inner ">
                     <div class="carousel-item active ">
-                        <img src="./images/cbl1920_(2).jpg" class="d-block w-100 " alt="...">
+                        <img src="images/cbl1920_(2).jpg" class="d-block w-100 " alt="...">
 
                     </div>
                     <div class="carousel-item">
-                        <img src="./images/caravan-1920x6502.jpg" class="d-block w-100" alt="...">
+                        <img src="images/caravan-1920x6502.jpg" class="d-block w-100" alt="...">
 
                     </div>
                     <div class="carousel-item">
-                        <img src="./images/1920_(1).jpg" class="d-block w-100 " alt="...">
+                        <img src="images/1920_(1).jpg" class="d-block w-100 " alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -214,7 +214,7 @@
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="/images/history.jpg" class="d-block w-100 rounded-pill" alt="...">
+                                    <img src="images/history.jpg" class="d-block w-100 rounded-pill" alt="...">
                                     <div class="overlay-text-1 rounded-pill">
                                         <div class="carousel-caption ">
                                             <h5>History</h5>
@@ -263,7 +263,7 @@
                 <br><br>
                 <div class="owl-carousel owl-theme ">
                     <div class="item">
-                        <img src="/images/Destination/Alleppey.jpg" class="d-block w-100 rounded-4" alt="...">
+                        <img src="images/Destination/Alleppey.jpg" class="d-block w-100 rounded-4" alt="...">
                         <div class="overlay-text d-block container rounded-4">
                             <br><br>
                             <h5>ALLEPPEY </h5>
@@ -274,7 +274,7 @@
 
                     </div>
                     <div class="item">
-                        <img src="/images/Destination/Ashtamudi-Lake.jpg" class="d-block w-100 rounded-4" alt="...">
+                        <img src="images/Destination/Ashtamudi-Lake.jpg" class="d-block w-100 rounded-4" alt="...">
                         <div class="overlay-text d-block container rounded-4">
                             <br><br>
                             <h5>ASHTAMUDI LAKE</h5>
@@ -285,7 +285,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <img src="/images/Destination/Munnar.jpg" class="d-block w-100 rounded-4" alt="...">
+                        <img src="images/Destination/Munnar.jpg" class="d-block w-100 rounded-4" alt="...">
                         <div class="overlay-text d-block container rounded-4">
                             <br><br>
                             <h5>MUNNAR</h5>
@@ -295,7 +295,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <img src="/images/Destination/Kovalam.jpg" class="d-block w-100 rounded-4" alt="...">
+                        <img src="images/Destination/Kovalam.jpg" class="d-block w-100 rounded-4" alt="...">
                         <div class="overlay-text d-block container rounded-4">
                             <br><br>
                             <h5>Kovalam</h5>
@@ -305,7 +305,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <img src="/images/Destination/Kumarakom.jpg" class="d-block w-100 rounded-4" alt="...">
+                        <img src="images/Destination/Kumarakom.jpg" class="d-block w-100 rounded-4" alt="...">
                         <div class="overlay-text d-block container rounded-4">
                             <br><br>
                             <h5>KUMARAKOM</h5>
@@ -316,7 +316,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <img src="/images/Destination/wayanad.jpg" class="d-block w-100 rounded-4" alt="...">
+                        <img src="images/Destination/wayanad.jpg" class="d-block w-100 rounded-4" alt="...">
                         <div class="overlay-text d-block container rounded-4">
                             <br><br>
                             <h5>WAYANAD</h5>
@@ -327,7 +327,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <img src="/images/Destination/Kochi.jpg" class="d-block w-100 rounded-4" alt="...">
+                        <img src="images/Destination/Kochi.jpg" class="d-block w-100 rounded-4" alt="...">
                         <div class="overlay-text d-block container rounded-4">
                             <br><br>
                             <h5>KOCHI</h5>
@@ -337,7 +337,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <img src="/images/Destination/Kozhikode.jpg" class="d-block w-100 rounded-4" alt="...">
+                        <img src="images/Destination/Kozhikode.jpg" class="d-block w-100 rounded-4" alt="...">
                         <div class="overlay-text d-block container rounded-4">
                             <br><br>
                             <h5>KOZHIKODE</h5>
@@ -347,7 +347,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <img src="/images/Destination/Varkala.jpg" class="d-block w-100 rounded-4" alt="...">
+                        <img src="images/Destination/Varkala.jpg" class="d-block w-100 rounded-4" alt="...">
                         <div class="overlay-text d-block container rounded-4">
                             <br><br>
                             <h5>VARKKALA</h5>
@@ -358,7 +358,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <img src="/images/Destination/Kollam.jpg" class="d-block w-100 rounded-4" alt="...">
+                        <img src="images/Destination/Kollam.jpg" class="d-block w-100 rounded-4" alt="...">
                         <div class="overlay-text d-block container rounded-4">
                             <br><br>
                             <h5>KOLLAM</h5>
@@ -369,7 +369,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <img src="/images/Destination/idukki.jpg" class="d-block w-100 rounded-4" alt="...">
+                        <img src="images/Destination/idukki.jpg" class="d-block w-100 rounded-4" alt="...">
                         <div class="overlay-text d-block container rounded-4">
                             <br><br>
                             <h5>IDUKKI</h5>
@@ -379,7 +379,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <img src="/images/Destination/periyar.jpg" class="d-block w-100 rounded-4" alt="...">
+                        <img src="images/Destination/periyar.jpg" class="d-block w-100 rounded-4" alt="...">
                         <div class="overlay-text d-block container rounded-4">
                             <br><br>
                             <h5>PERIYAR NATIONAL PARK</h5>
@@ -413,7 +413,7 @@
                 </svg>
                 <div class="row align-items-center pb-5 ">
                     <div class="col-12 col-lg-4 mb-1">
-                        <img src="/images/kerala-tourism-road-map.gif" alt="Districts-of-kerala" width="400"
+                        <img src="images/kerala-tourism-road-map.gif" alt="Districts-of-kerala" width="400"
                             class="rounded w-100">
                     </div>
                     <div class="col-12 col-lg-4">
@@ -1589,7 +1589,7 @@
             <div class="container">
                 <div class="row align-items-center justify-content-center gap-5">
                     <div class="col-12 col-md-4 ">
-                        <img src="/images/Kathakali artist with welcome posture.png" style=" border-radius: 50%;" alt=""
+                        <img src="images/Kathakali artist with welcome posture.png" style=" border-radius: 50%;" alt=""
                             class="d-flex w-100">
 
                     </div>
