districts background image path correction

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             <br>
 
         </section>
-        <section id="districts" class="parallax">
+        <section id="districts" class="parallax" style="background-image: url(./images/kannur_sunset.jpg);">
             <br><br>
             <h2 class="text-center" style="color: azure;">Districts of Kerala</h2>
             <br><br>
